--- a/src/View/List/lists.html.twig
+++ b/src/View/List/lists.html.twig
@@ -10,3 +10,7 @@
 {% block content %}
   {% include 'Components/_user-lists.html.twig' %}
 {% endblock %}
+
+{% block javascript %}
+    <script src="/assets/javascript/user-lists.js"></script>
+{% endblock %}
