--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block stylesheet %}
-	<link rel="stylesheet" href="/assets/css/home.css">
-	<link rel="stylesheet" href="/assets/css/navbar.css">
 	<link rel="stylesheet" href="/assets/css/main.css">
+	<link rel="stylesheet" href="/assets/css/navbar.css">
+	<link rel="stylesheet" href="/assets/css/home.css">
 {% endblock %}
 
 {% block content %}
@@ -15,22 +15,22 @@
 		<h1 class='titre'>Give me Gifts !</h1>
 		<div class="container-card">
 			<div class="card">
-				<img class="image-card" src="/assets/images/list_share_bg.jpg">
+				<img class="image-card" src="/assets/images/list_share_bg.jpg" alt="cadeau-bleu">
 				<h3>Gift Me 5</h3>
-				<p class="paragraphe">Vous pouvez créer vos propres listes de cadeaux et les partager à vos proches, ils peuvent parcourir votre liste et vous offrir ce qu'ils veulent.</p>				
+				<p class="paragraph">Vous pouvez créer vos propres listes de cadeaux et les partager à vos proches, ils peuvent parcourir votre liste et vous offrir ce qu'ils veulent.</p>
                 <a class="button" href="/login">Se connecter</a>
 			</div>
 			<div class="card">
-				<img class="image-card" src="/assets/images/pexels-laura.jpg">
+				<img class="image-card" src="/assets/images/pexels-laura.jpg" alt="cadeau-beige">
 				<h3>Comment ça fonctionne?</h3>
-				<p class="paragraphe">Marre des cadeaux inutiles ?<br>Vos amis sont inutiles quand vient le temps de vous satisfaire ?
+				<p class="paragraph">Marre des cadeaux inutiles ?<br>Vos amis sont inutiles quand vient le temps de vous satisfaire ?
 				<br>Aidez-les à vous faire plaisir avec Give me Gifts!</p>
                 <a class="button" href="/list">Exemples</a>
 			</div>
 			<div class="card">
-				<img class="image-card" src="/assets/images/pexels-szabo.jpg">
+				<img class="image-card" src="/assets/images/pexels-szabo.jpg" alt="youtube-image">
 				<h3>Youtube</h3>
-				<p class="paragraphe">Vous pouvez retrouver une vidéo explicative du site Give me Gifts</p>
+				<p class="paragraph">Vous pouvez retrouver une vidéo explicative du site Give me Gifts et apprendre à donner un cadeau à vos amis </p>
 				<a class="button" href="http://www.youtube.com">Regarder</a>
 			</div>		
 	</div>
