--- a/public/assets/css/list.css
+++ b/public/assets/css/list.css
@@ -4,85 +4,6 @@
     position: fixed;
 }
 
-.noaccount {
-    text-align: center;
-    background-color: var(--btn-color);
-    width: 13rem;
-    margin: auto;
-    border-radius: 11px;
-    border: solid black 0.5px;
-    box-shadow: 2px 2px 4px rgb(0, 0, 0);
-    padding: 1rem;
-}
-
-.noaccount:hover {
-    background-color: var(--background-color);
-    color: var(--btn-color);
-    border: 1px solid var(--btn-color);
-}
-
-.noaccount a {
-    color: var(--primary-color);
-    text-decoration: none;
-    padding: 1rem;
-}
-
-.noaccount-href:hover {
-    color: var(--btn-color);
-    text-decoration: none;
-}
-
-.cards {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    gap: 2rem;
-    margin: 0px;
-}
-
-.card-header {
-    height: 20px;
-    background: #007EA7;
-}
-
-.card-footer {
-    height: 20px;
-    background: #007EA7;
-}
-
-.in_card {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: var(--background-color);
-    opacity: 0.85;
-}
-
-.card {
-    border-radius: 11px;
-}
-
-.card-header {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.card-footer {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-div.card div div {
-    margin: auto;
-}
-
-div.card div div {
-    margin: auto;
-}
-
 h1 {
     text-align: center;
     color: var(--primary-color);
@@ -99,39 +20,161 @@ h3 {
     text-align: center;
     color: var(--primary-color);
     text-shadow: 5px 5px 8px rgb(0, 0, 0);
+    margin-top: 5rem;
 }
 
-.sign_up {
-    display: block;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    color: var(--primary-color);
-    background-color: #E5383B;
+.no-account {
+    text-align: center;
+    background-color: var(--btn-color);
+    width: 13rem;
+    margin: auto;
     border-radius: 11px;
-    border: none;
+    border: solid black 0.5px;
+    box-shadow: 2px 2px 4px rgb(0, 0, 0);
+    padding: 1rem;
 }
 
-div.cards div div a {
+.no-account:hover {
+    background-color: var(--background-color);
+    color: var(--btn-color);
+    border: 1px solid var(--btn-color);
+}
+
+.no-account a {
+    color: var(--primary-color);
     text-decoration: none;
+    padding: 1rem;
+}
+
+.no-account-href:hover {
+    color: var(--btn-color);
+    text-decoration: none;
+}
+
+/*list container*/
+.cards {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    gap: 2rem;
+    height: auto;
+    padding-bottom: 3rem;
+    margin-top: 5rem;
+}
+
+/* add new list */
+.in-card-add {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: var(--background-color);
+    opacity: 0.9;
+    padding: 0.5rem;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.card-add {
+    border-radius: 10px;
+    width: calc(100% - 2rem);
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.in-card-add a img {
+    height: 3rem;
+    width: 3rem;
+}
+
+.card {
+    border-radius: 10px;
+    width: calc(100% - 2rem);
+    margin-left: 1rem;
+    margin-right: 1rem;
+    cursor: pointer;
+}
+
+.card-header,
+.card-header-add {
+    height: fit-content;
+    padding: 0.5rem;
+    text-align: center;
+    background-color: var(--card-color);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     color: var(--primary-color);
 }
 
-@media screen and (min-width: 600px) {
+.in-card {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--background-color);
+    opacity: 0.9;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.in-card .card-body {
+    width: 60%;
+    padding: 0.5rem;
+}
+
+.in-card .card-body p {
+    font-size: 1rem;
+}
+
+.card-title {
+    font-weight: bold;
+    text-align: center;
+}
+
+.card-date {
+    font-style: italic;
+    text-align: center;
+}
+
+.card-description {
+    text-align: center;
+}
+
+.in-card .gift-list {
+    width: calc(100% - 60%);
+    padding: 0.5rem 0.5rem 0.5rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.in-card .gift-list p {
+    font-size: 1rem;
+    align-self: center;
+    background-color: var(--card-color);
+    padding: 0.5rem;
+    border-radius: 10px;
+    color: var(--primary-color);;
+}
+
+@media screen and (min-width: 1200px) {
     .main-background {
         background-image: url("/assets/images/background_list.jpg");
-        position: absolute;
     }
+
     .cards {
         flex-direction: row;
-        margin-top: 5rem;
-        margin: 0 2rem;
+        flex-wrap: wrap;
+        justify-content: center;
     }
+
+    .card-add {
+        border-radius: 10px;
+        width: calc(100% - 7rem);
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+
     .card {
-        margin-top: 20px;
-        flex-grow: 1;
         box-shadow: 5px 5px 8px rgb(0, 0, 0);
         background: var(--background-color);
-        opacity: 0.8;
+        width: calc((100% / 3) - 5rem);
     }
 }
