--- a/src/View/Components/_lists.html.twig
+++ b/src/View/Components/_lists.html.twig
@@ -1,103 +1,86 @@
 <div class="main-background"></div>
 <h1>
-	Listes
+    Listes
 </h1>
 <h2>
-	Creez, Modifiez, et Partagez vos listes!
+    Creez, Modifiez, et Partagez vos listes!
 </h2>
-<div class="noaccount">
-	<a class="noaccount-href" href="/signup">Créer un compte</a>
+<div class="no-account">
+    <a class="no-account-href" href="/signup">Créer un compte</a>
 </div>
 <h3>
-	Voici quelques exemples de listes.
+    Voici quelques exemples de listes.
 </h3>
 
 <div class="cards">
-	<div class="card">
-		<div class="card-header"></div>
-		<div class="in_card">
-			<div class="card-body">
-				<p class="card-title">
-					Titre de la liste
-				</p>
-				<p class="card-event">
-					Événement
-				</p>
-				<p class="card-price">
-					Date
-				</p>
-				<p class="card-description">
-					Description
-				</p>
-			</div>
-			<div class="liste cadeaux">
-				<p>cadeau1</p>
-				<p>cadeau2</p>
-				<p>cadeau3</p>
-				<p>cadeau4</p>
-				<p>cadeau5</p>
-			</table>
-		</div>
-	</div>
-	<div class="card-footer">
-		<a href="/list/share">voir</a>
-	</div>
+    <div class="card">
+        <div class="card-header">Événement</div>
+        <div class="in-card">
+            <div class="card-body">
+                <p class="card-title">
+                    Titre de la liste
+                </p>
+                <p class="card-date">
+                    Date
+                </p>
+                <p class="card-description">
+                    Description
+                </p>
+            </div>
+            <div class="gift-list">
+                <p>cadeau1</p>
+                <p>cadeau2</p>
+                <p>cadeau3</p>
+                <p>cadeau4</p>
+                <p>cadeau5</p>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header">Événement</div>
+        <div class="in-card">
+            <div class="card-body">
+                <p class="card-title">
+                    Titre de la liste
+                </p>
+                <p class="card-date">
+                    Date
+                </p>
+                <p class="card-description">
+                    Description
+                </p>
+            </div>
+            <div class="gift-list">
+                <p>cadeau1</p>
+                <p>cadeau2</p>
+                <p>cadeau3</p>
+                <p>cadeau4</p>
+                <p>cadeau5</p>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header">Événement</div>
+        <div class="in-card">
+            <div class="card-body">
+                <p class="card-title">
+                    Titre de la liste
+                </p>
+                <p class="card-date">
+                    Date
+                </p>
+                <p class="card-description">
+                    Description
+                </p>
+            </div>
+            <div class="gift-list">
+                <p>cadeau1</p>
+                <p>cadeau2</p>
+                <p>cadeau3</p>
+                <p>cadeau4</p>
+                <p>cadeau5</p>
+            </div>
+        </div>
+    </div>
+
 </div>
-<div class="card">
-	<div class="card-header"></div>
-	<div class="in_card">
-		<div class="card-body">
-			<p class="card-title">
-				Titre de la liste
-			</p>
-			<p class="card-event">
-				Événement
-			</p>
-			<p class="card-price">
-				Date
-			</p>
-			<p class="card-description">
-				Description
-			</p>
-		</div>
-		<div class="liste cadeaux">
-			<p>cadeau1</p>
-			<p>cadeau2</p>
-			<p>cadeau3</p>
-			<p>cadeau4</p>
-			<p>cadeau5</p>
-		</div>
-	</div>
-	<div class="card-footer">
-		<a href="/list/share">voir</a>
-	</div>
-</div>
-<div class="card">
-	<div class="card-header"></div>
-	<div class="in_card">
-		<div class="card-body">
-			<p class="card-title">
-				Titre de la liste
-			</p>
-			<p class="card-event">
-				Événement
-			</p>
-			<p class="card-price">
-				Date
-			</p>
-			<p class="card-description">
-				Description
-			</p>
-		</div>
-		<div class="liste cadeaux">
-			<p>cadeau1</p>
-			<p>cadeau2</p>
-			<p>cadeau3</p>
-			<p>cadeau4</p>
-			<p>cadeau5</p>
-		</div>
-	</div>
-	<div class="card-footer">
-		<a href="/list/share">voir</a>
-	</div>
-</div></div>
