--- a/src/View/Components/_user-lists.html.twig
+++ b/src/View/Components/_user-lists.html.twig
@@ -18,7 +18,7 @@
             <div class="in-card">
                 <div class="card-body">
                     <p class="card-title">{{ list[0][0]['lname'] }}</p>
-                    <p class="card-date">{{ list[0][0]['limit_date'] }}</p>
+                    <p class="card-date">{{ list[0][0]['limit_date']|date('d-m-Y') }}</p>
                     <p class="card-description">{{ list[0][0]['ldescription'] }}</p>
                 </div>
                 <div class="gift-list">
