--- a/src/View/List/share.html.twig
+++ b/src/View/List/share.html.twig
@@ -16,9 +16,10 @@
 {% block content %}
     <div class="main-background"></div>
     <div class="list-share-container">
+
         <h3 class="list-title">{{ list[0]['lname'] }}</h3>
         <h4 class="list-event">{{ list[0]['ename'] }}</h4>
-        <h4 class="list-date">{{ list[0]['limit_date'] }}</h4>
+        <h4 class="list-date">{{ list[0]['limit_date']|date('d-m-Y') }}</h4>
         <p class="list-description">
             <strong>{{ list[0]['ldescription'] }}</strong>
         </p>
