--- a/src/View/Components/_lists.html.twig
+++ b/src/View/Components/_lists.html.twig
@@ -3,7 +3,7 @@
     Listes
 </h1>
 <h2>
-    Creez, Modifiez, et Partagez vos listes!
+    Créez, Modifiez, et Partagez vos listes!
 </h2>
 <div class="no-account">
     <a class="no-account-href" href="/signup">Créer un compte</a>
@@ -13,74 +13,24 @@
 </h3>
 
 <div class="cards">
-    <div class="card">
-        <div class="card-header">Événement</div>
-        <div class="in-card">
-            <div class="card-body">
-                <p class="card-title">
-                    Titre de la liste
-                </p>
-                <p class="card-date">
-                    Date
-                </p>
-                <p class="card-description">
-                    Description
-                </p>
-            </div>
-            <div class="gift-list">
-                <p>cadeau1</p>
-                <p>cadeau2</p>
-                <p>cadeau3</p>
-                <p>cadeau4</p>
-                <p>cadeau5</p>
+    {% for i in 0..2 %}
+        <div class="card">
+            <div style="display: none;">{{ lists[i][0][0]['lid'] }}</div>
+            <div class="card-header">{{ lists[i][0][0]['ename'] }}</div>
+            <div class="in-card">
+                <div class="card-body">
+                    <p class="card-title">{{ lists[i][0][0]['lname'] }}</p>
+                    <p class="card-date">{{ lists[i][0][0]['limit_date']|date('d-m-Y') }}</p>
+                    <p class="card-description">{{ lists[i][0][0]['ldescription'] }}</p>
+                </div>
+                <div class="gift-list">
+                    {% for j in 0..3 %}
+                        {% if lists[i][1][j]['aname'] is not null %}
+                            <p>{{ lists[i][1][j]['aname'] }}</p>
+                        {% endif %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
-    </div>
-    <div class="card">
-        <div class="card-header">Événement</div>
-        <div class="in-card">
-            <div class="card-body">
-                <p class="card-title">
-                    Titre de la liste
-                </p>
-                <p class="card-date">
-                    Date
-                </p>
-                <p class="card-description">
-                    Description
-                </p>
-            </div>
-            <div class="gift-list">
-                <p>cadeau1</p>
-                <p>cadeau2</p>
-                <p>cadeau3</p>
-                <p>cadeau4</p>
-                <p>cadeau5</p>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-header">Événement</div>
-        <div class="in-card">
-            <div class="card-body">
-                <p class="card-title">
-                    Titre de la liste
-                </p>
-                <p class="card-date">
-                    Date
-                </p>
-                <p class="card-description">
-                    Description
-                </p>
-            </div>
-            <div class="gift-list">
-                <p>cadeau1</p>
-                <p>cadeau2</p>
-                <p>cadeau3</p>
-                <p>cadeau4</p>
-                <p>cadeau5</p>
-            </div>
-        </div>
-    </div>
-
+    {% endfor %}
 </div>
