--- a/src/View/List/add_article.html.twig
+++ b/src/View/List/add_article.html.twig
@@ -16,15 +16,18 @@
 {% block content %}
 	<div class="main-background"></div>
 	<div class='page'>
-		<div class="add-form">
-			<h1>Ajouter un cadeau</h1>
+		<div class="add-form" >
 				<div class="list-container">
-				<h3 class="list-title">{{ lists['name'] }}</h3>
+				<h3 class="list-title">Nom de la liste : {{ lists['name'] }}</h3>
+				<h3 class="list-date">Date de l'évenement : {{ lists['limit_date'] }}</h3>
 				<p class="list-description">
 					<strong>{{ lists['description'] }}</strong>
 				</p>
 				</div>
 			<div class="form-container">
+				<div class="add_Article">
+			    <button class ="add" > Ajouter un cadeau </button>
+				</div>
 				<form class="form" action="" method="POST">
 					<label for="giftName">
 						<p class="giftName">Nom du cadeau</p>
@@ -54,22 +57,18 @@
 				<div class="article-container">
 			{% for article in list %}
                 <div class="article">
-                    <img class="article-img" alt="{{ article.name }}"
-                         src="{{ article.picture }}"/>
+                    <a href="{{ article.market_link }}" class="article-img"><img class="article-img" alt="{{ article.name }}" src="{{ article.picture }}"/></a>
                     <h4 class="article-title">{{ article.name }}</h4>
                     <h4 class="article-price">{{ article.price }}€</h4>
                     <p class="article-description">{{ article.description }}</p>
-                    <a class="seeMore-button" href="{{ article.market_link }}">
-                        <p>En savoir plus</p>
-                    </a>
+					<input class="delete-button" type="submit" name="delete" id="delete" value="Supprimer">
                 </div>
             {% endfor %}
 				</div>
 			</div>
+			</div>
 		</div>
 	</div>
-	</div>		
-
-
+<script src="/assets/javascript/add-article.js"></script>
 {% endblock %}
 
