--- a/src/View/List/add_article.html.twig
+++ b/src/View/List/add_article.html.twig
@@ -61,8 +61,10 @@
                     <h4 class="article-title">{{ article.name }}</h4>
                     <h4 class="article-price">{{ article.price }}€</h4>
                     <p class="article-description">{{ article.description }}</p>
-					<input class="delete-button" type="submit" name="delete" id="delete" value="Supprimer">
-                </div>
+					<form action="" method="GET" >
+					<input class="delete-button" type="submit" name="{{ article.id }}" id="{{ article.id }}" value="Supprimer">
+					</form>
+				</div>
             {% endfor %}
 				</div>
 			</div>
