--- a/src/View/List/add_article.html.twig
+++ b/src/View/List/add_article.html.twig
@@ -16,19 +16,23 @@
 {% block content %}
 	<div class="main-background"></div>
 	<div class='page'>
-		<div class="add-form" >
+		<div class="add-form">
 			<div class="list-container">
-				<h3 class="list-title">Nom de la liste : {{ lists['name'] }}</h3>
-				<h3 class="list-date">Date de l'évenement : {{ lists['limit_date'] }}</h3>
+				<h3 class="list-title">Nom de la liste :
+					{{ lists['name'] }}</h3>
+				<h3 class="list-date">Date de l'évenement :
+					{{ lists['limit_date'] }}</h3>
 				<p class="list-description">
 					<strong>{{ lists['description'] }}</strong>
 				</p>
 			</div>
-				<div class="form-container">
-					<div class="add_Article">
-			    		<button class ="add" > Ajouter un cadeau </button>
-					</div>
-					<form class="form" action="" method="POST">
+			<div class="form-container">
+				<div class="add_Article">
+					<button class="add">
+						Ajouter un cadeau
+					</button>
+				</div>
+				<form class="form" action="" method="POST">
 					<label for="giftName">
 						<p class="giftName">Nom du cadeau</p>
 					</label>
@@ -49,28 +53,27 @@
 						<p class="description">Description</p>
 					</label>
 					<textarea class="description_area" id="description" placeholder="Indiquez des information sur votre cadeau" name="description" required></textarea>
-						<div>
-							<input type="submit" id='submit' value="Ajouter">
-						</div>
-					</form>
+					<div>
+						<input type="submit" id='submit' value="Ajouter">
+					</div>
+				</form>
 				<div class="list-share-container">
 					<div class="article-container">
 						{% for article in list %}
-               			<div class="article">
-							<a href="{{ article.market_link }}" class="article-img"><img class="article-img" alt="{{ article.name }}" src="{{ article.picture }}"/></a>
-							<h4 class="article-title">{{ article.name }}</h4>
-							<h4 class="article-price">{{ article.price }}€</h4>
-							<p class="article-description">{{ article.description }}</p>
-							<form action="" method="GET" >
-							<input class="delete-button" type="submit" name="{{ article.id }}" id="{{ article.id }}" value="Supprimer">
-							</form>
-						</div>
-            			{% endfor %}
+							<div class="article">
+								<a href="{{ article.market_link }}" class="article-img"><img class="article-img" alt="{{ article.name }}" src="{{ article.picture }}"/></a>
+								<h4 class="article-title">{{ article.name }}</h4>
+								<h4 class="article-price">{{ article.price }}€</h4>
+								<p class="article-description">{{ article.description }}</p>
+								<form action="" method="GET">
+									<input class="delete-button" type="submit" name="{{ article.id }}" id="{{ article.id }}" value="Supprimer">
+								</form>
+							</div>
+						{% endfor %}
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-<script src="/assets/javascript/add-article.js"></script>
+	<script src="/assets/javascript/add-article.js"></script>
 {% endblock %}
-
