--- a/public/assets/css/user-lists.css
+++ b/public/assets/css/user-lists.css
@@ -107,16 +107,18 @@ h1 {
     padding: 0.5rem 0.5rem 0.5rem 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
+
 }
 
 .in-card .gift-list p {
-    font-size: 1rem;
-    align-self: center;
+    margin: 0.3rem;
+    font-size: 1.2rem;
     background-color: var(--card-color);
     padding: 0.5rem;
     border-radius: 10px;
-    color: var(--primary-color);;
+    color: var(--primary-color);
+    text-align: center;
 }
 
 @media screen and (min-width: 1200px) {
