--- a/public/assets/css/add_list.css
+++ b/public/assets/css/add_list.css
@@ -7,6 +7,7 @@
 /*MOBILE FIRST*/
 
 .add_list-title {
+    font-size: 2rem;
     background-color: transparent;
     color: var(--primary-color);
     text-shadow: 5px 5px 8px rgb(0, 0, 0);
@@ -21,24 +22,40 @@
     color: var(--primary-color);
     text-align: center;
     margin-right: 1rem;
+    font-size: 20px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    text-shadow: 5px 5px 8px rgb(0, 0, 0);
 }
 
 .description {
     color: var(--primary-color);
     text-align: center;
     margin-right: 1rem;
+    font-size: 20px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    text-shadow: 5px 5px 8px rgb(0, 0, 0);
 }
 
 .date {
     color: var(--primary-color);
     text-align: center;
     margin-right: 1rem;
+    font-size: 20px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    text-shadow: 5px 5px 8px rgb(0, 0, 0);
 }
 
 .event {
     color: var(--primary-color);
     text-align: center;
     margin-right: 1rem;
+    font-size: 20px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    text-shadow: 5px 5px 8px rgb(0, 0, 0);
 }
 
 .form-container {
@@ -89,14 +106,13 @@ input[type=text] {
 input[type=submit] {
     background-color: var(--btn-color);
     color: var(--primary-color);
-    font-size: 15px;
-    padding: 10px 20px;
+    font-size: 20px;
+    padding: 14px 20px;
     border: none;
     cursor: pointer;
-    width: 10rem;
+    margin: 1rem 5rem 1rem 5rem;
+    width: 13rem;
     border-radius: 11px;
-    margin-top: 1rem;
-    margin-left: 7rem;
     border: solid black 0.5px;
     box-shadow: 2px 2px 4px black;
 }
@@ -117,32 +133,44 @@ input[type=submit]:hover {
         color: var(--primary-color);
         text-align: center;
         margin: 1rem 1rem 0 1rem;
-        font-size: 40px;
+        font-size: 4rem;
         text-shadow: 5px 5px 8px rgb(0, 0, 0);
     }
     
     .name {
         color: var(--primary-color);
+        text-shadow: 5px 5px 8px rgb(0, 0, 0);
+        font-size: 30px;
+        margin-bottom: 5px;
+        font-weight: bold; 
         text-align: center;
-        margin-right: 1rem;
     }
     
     .description {
         color: var(--primary-color);
+        text-shadow: 5px 5px 8px rgb(0, 0, 0);
+        font-size: 30px;
+        margin-bottom: 5px;
+        font-weight: bold; 
         text-align: center;
-        margin-right: 1rem;
     }
     
     .date {
         color: var(--primary-color);
+        text-shadow: 5px 5px 8px rgb(0, 0, 0);
+        font-size: 30px;
+        margin-bottom: 5px;
+        font-weight: bold; 
         text-align: center;
-        margin-right: 1rem;
     }
     
     .event {
         color: var(--primary-color);
+        text-shadow: 5px 5px 8px rgb(0, 0, 0);
+        font-size: 30px;
+        margin-bottom: 5px;
+        font-weight: bold; 
         text-align: center;
-        margin-right: 1rem;
     }
     
     .form{
@@ -161,6 +189,8 @@ input[type=submit]:hover {
         margin-left: auto;
         margin-right: auto;
         width: 20rem;
+        height: 1.5rem;
+        font-size: 1rem;
     }
     
     input[type=text] {
@@ -172,6 +202,8 @@ input[type=submit]:hover {
         margin-left: auto;
         margin-right: auto;
         width: 20rem;
+        height: 1.5rem;
+        font-size: 1rem;
     }
     
     .choose_event {
@@ -183,6 +215,8 @@ input[type=submit]:hover {
         width: 20rem;
         margin-left: auto;
         margin-right: auto;
+        height: 2.5rem;
+        font-size: 1rem;
     }
     
     .description_area {
@@ -200,17 +234,17 @@ input[type=submit]:hover {
     input[type=submit] {
         background-color: var(--btn-color);
         color: var(--primary-color);
-        font-size: 15px;
-        padding: 10px 20px;
+        font-size: 20px;
+        padding: 14px 20px;
+        margin: 1rem 0;
         border: none;
         cursor: pointer;
-        width: 10rem;
+        width: 12rem;
         border-radius: 11px;
-        margin-top: 1rem;
+        box-shadow: 2px 2px 4px black;
+        border: solid black 0.5px;
         margin-left: auto;
         margin-right: auto;
-        border: solid black 0.5px;
-        box-shadow: 2px 2px 4px black;
     }
     
     input[type=submit]:hover {
